--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,37 +1,14 @@
 @import "./base.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@layer components {
+    .primaryBtn {
+        @apply bg-blue-700 hover:bg-blue-900 py-2.5 px-5 rounded-md text-gray-200 font-medium
+    }
 
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+    .active {
+        @apply text-gray-900
+    }
 }
