--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 @layer components {
     .primaryBtn {
-        @apply bg-blue-700 hover:bg-blue-900 py-2.5 px-5 rounded-md text-gray-200 font-medium
+        @apply bg-blue-700 hover:bg-blue-900 dark:bg-sky-300 dark:hover:bg-sky-400 active:outline active:outline-2 active:outline-blue-400/80 py-2.5 px-5 rounded-md text-gray-200 font-medium transition-colors duration-300
     }
 
     .primaryOutlineBtn {
