--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,9 @@
     .primaryOutlineBtn {
         @apply bg-white hover:bg-blue-700 border-2 border-blue-700 text-blue-700 py-2.5 px-5 rounded-md text-gray-200 font-medium
     }
-
+.customContainer{
+    @apply max-w-screen-xl px-6 md:px-10 lg:px-14 mx-auto
+}
     .active {
         @apply text-gray-900
     }
