--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,3 @@
-@import "./base.css";
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,7 +11,7 @@
     }
 
     .customContainer {
-        @apply max-w-screen-xl p-6 md:px-10 lg:px-14 mx-auto
+        @apply max-w-screen-xl py-6 px-4 md:px-10 lg:px-14 mx-auto dark:bg-zinc-900
     }
 
     .active {
