--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,10 +11,15 @@
     }
 
     .customContainer {
-        @apply max-w-screen-xl py-6 px-4 md:px-10 lg:px-14 mx-auto dark:bg-zinc-900
+        @apply max-w-screen-xl py-6 px-4 md:px-10 lg:px-14 mx-auto dark:bg-neutral-800
     }
 
     .active {
         @apply text-gray-900
+    }
+}
+@media (prefers-color-scheme: dark) {
+    body{
+        background-color: rgb(23, 23, 23);
     }
 }
