--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,15 +11,15 @@
     }
 
     .customContainer {
-        @apply max-w-screen-xl py-6 px-4 md:px-10 lg:px-14 mx-auto dark:bg-neutral-800
+        @apply max-w-screen-xl py-6 px-4 md:px-10 lg:px-14 mx-auto bg-white dark:bg-neutral-800
     }
 
     .active {
         @apply text-gray-900
     }
 }
-@media (prefers-color-scheme: dark) {
-    body{
-        background-color: rgb(23, 23, 23);
-    }
+
+/*For Tailwind class based dark mode*/
+html.dark {
+    background-color: rgb(23, 23, 23);
 }
