--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@
     }
 
     .customContainer {
-        @apply max-w-screen-xl py-6 px-4 md:px-10 lg:px-14 mx-auto bg-white dark:bg-neutral-900
+        @apply max-w-screen-xl p-6 md:px-10 lg:px-14 mx-auto bg-white dark:bg-neutral-900
     }
 
     .active {
